--- a/AnnZone-Serve/src/main/resources/conf/common/storage.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/storage.properties
@@ -9,6 +9,6 @@ ss.upload.keygen=BY_DATETIME
 
 ss.space.storeSuffix=true
 ss.space.impl=act.storage.FileSystemStoragePlugin
-ss.space.home.dir=store1
+ss.space.home.dir=space
 ss.space.staticWebEndpoint=/space
 ss.space.get.MetaOnly=true
