--- a/AnnZone-Serve/src/main/resources/conf/common/db.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/db.properties
@@ -1,7 +1,8 @@
 #db.url=mongodb://localhost:27017/bmzf_serve
 #上边为单一数据库，下边配置多数据源
 #db1 mysql,db2 mongodb
-db.instances=mysql,mongodb
+#db.instances=mysql,mongodb
+db.instances=mysql
 
 # db1 mysql default configurations
 
@@ -12,5 +13,5 @@ db.mysql.username=root
 db.mysql.password=root
 
 # db2 mongodb
-db.mongodb.impl=act.db.morphia.MorphiaPlugin
-db.mongodb.uri=mongodb://localhost:27017/ann_zone_serve
+#db.mongodb.impl=act.db.morphia.MorphiaPlugin
+#db.mongodb.uri=mongodb://localhost:27017/ann_zone_serve
