布置前台菜单

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ AnnZone-Serve/test.trace.db
 AnnZone-Serve/upload
 AnnZone-Console/node_modules
 AnnZone-Serve/*.pid
+AnnZone-Console/src/assets/demo/demo7/media/img/logo/logo.psd
