--- a/AnnZone-Console/package.json
+++ b/AnnZone-Console/package.json
@@ -1,6 +1,6 @@
 {
     "name": "AnnZone-Console",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "license": "MIT",
     "scripts": {
         "ng": "ng",
@@ -23,20 +23,21 @@
         "@angular/platform-browser": "^5.0.0",
         "@angular/platform-browser-dynamic": "^5.0.0",
         "@angular/router": "^5.0.0",
-        "core-js": "^2.4.1",
-        "rxjs": "^5.5.2",
-        "zone.js": "^0.8.14",
-        "jquery": "^3.2.1",
-        "@types/jquery": "^3.2.6",
-        "enhanced-resolve": "^3.3.0",
-        "classlist.js": "^1.1.20150312",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
-        "primeng": "^4.1.3",
+        "@types/jquery": "^3.2.6",
+        "classlist.js": "^1.1.20150312",
+        "core-js": "^2.4.1",
+        "enhanced-resolve": "^3.3.0",
+        "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
-        "typescript-formatter": "^5.2.0"
+        "primeng": "^4.1.3",
+        "rxjs": "^5.5.2",
+        "typescript-formatter": "^5.2.0",
+        "zone.js": "^0.8.14"
     },
     "devDependencies": {
-        "@angular/cli": "1.6.2",
+        "@angular-devkit/core": "^0.0.28",
+        "@angular/cli": "^1.6.5",
         "@angular/compiler-cli": "^5.0.0",
         "@angular/language-service": "^5.0.0",
         "typescript": "~2.4.2"
