--- a/AnnZone-Serve/src/main/resources/conf/common/db.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/db.properties
@@ -8,7 +8,7 @@ db.instances=mysql
 
 db.mysql.impl=act.db.ebean2.EbeanPlugin
 db.mysql.driver=com.mysql.cj.jdbc.Driver
-db.mysql.url=jdbc:mysql://localhost:3306/ann_zone_serve?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+db.mysql.url=jdbc:mysql://localhost:3306/ann_zone_serve?serverTimezone=GMT&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 db.mysql.username=root
 db.mysql.password=root
 
