可以正确登录

--- a/AnnZone-Serve/src/main/resources/conf/common/app.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/app.properties
@@ -17,3 +17,8 @@ metric.enabled=false
 job.pool.size=30
 session.encrypt=true
 app.default.recipient=i@anline.cn
+#跨域 无需在此配置，此处为全局配置，仅需在http api相关的控制器下面指定返回头即可
+cors=true
+cors.option.check=false
+cors.origin=*
+cors.headers=Content-Type, X-HTTP-Method-Override, X-Requested-With
