--- a/AnnZone-Console/package.json
+++ b/AnnZone-Console/package.json
@@ -27,10 +27,10 @@
         "@types/jquery": "^3.2.6",
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.4.1",
-        "element-angular": "^0.5.4",
         "enhanced-resolve": "^3.3.0",
         "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
+        "ng-zorro-antd": "^0.6.13",
         "primeng": "^4.1.3",
         "rxjs": "^5.5.2",
         "typescript-formatter": "^5.2.0",
