实现了Angular本地和服务器附件、图片上传，文件重复的直接返回服务器上的文件信息，修改了数据库相关表结构，同时导出了最新数据库结构文件

--- a/AnnZone-Serve/src/main/resources/conf/common/storage.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/storage.properties
@@ -1,11 +1,12 @@
 # For named storage service
 #upload 存上传的，space是个人网盘
 ss.instances=upload,space
+
+ss.upload.storeSuffix=true
 ss.upload.impl=act.storage.FileSystemStoragePlugin
 ss.upload.home.dir=upload
 ss.upload.staticWebEndpoint=/upload
 ss.upload.get.MetaOnly=true
-ss.upload.keygen=BY_DATETIME
 
 ss.space.storeSuffix=true
 ss.space.impl=act.storage.FileSystemStoragePlugin
