--- a/AnnZone-Console/package.json
+++ b/AnnZone-Console/package.json
@@ -28,6 +28,7 @@
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.4.1",
         "enhanced-resolve": "^3.3.0",
+        "fundebug-javascript": "^0.3.4",
         "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
         "ng-zorro-antd": "^0.6.13",
