--- a/AnnZone-Android/app/build.gradle
+++ b/AnnZone-Android/app/build.gradle
@@ -31,13 +31,22 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation "com.android.support:appcompat-v7:$_buildToolsVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:support-v4:$_buildToolsVersion"
+    implementation "com.android.support:design:$_buildToolsVersion"
+    implementation "com.android.support:recyclerview-v7:$_buildToolsVersion"
+    implementation "com.android.support:cardview-v7:$_buildToolsVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compile "com.android.support:multidex:1.0.2"
     //ObjectBox 依赖
     compile "io.objectbox:objectbox-kotlin:$objectboxVersion"
     annotationProcessor "io.objectbox:objectbox-processor:$objectboxVersion"
+    //Tabbar
+    compile 'com.github.armcha:SpaceNavigationView:1.6.0'
 
 }
