服务端添加了修改密码接口

--- a/AnnZone-Serve/src/main/resources/conf/common/app.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/app.properties
@@ -1,7 +1,7 @@
 #act base setting
 http.port=2222
 cli.port=2333
-#jwt=true
+jwt=true
 cli.session.max=600
 http.params.max=200
 http.secure=false
@@ -11,7 +11,7 @@ debug=false
 cookie.prefix=ann_
 source.version=1.8
 target.version=1.8
-server.header=AnnServer/1.0.0Beta
+server.header=AnnZone/1.0.0Dev
 secret=dd74ef8d524c678056d269a2ecb0536d
 metric.enabled=false
 job.pool.size=30
