--- a/AnnZone-Console/package.json
+++ b/AnnZone-Console/package.json
@@ -14,16 +14,16 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^5.0.0",
-        "@angular/common": "^5.0.0",
-        "@angular/compiler": "^5.0.0",
-        "@angular/core": "^5.0.0",
-        "@angular/forms": "^5.0.0",
-        "@angular/http": "^5.0.0",
-        "@angular/platform-browser": "^5.0.0",
-        "@angular/platform-browser-dynamic": "^5.0.0",
-        "@angular/router": "^5.0.0",
-        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
+        "@angular/animations": "^5.2.3",
+        "@angular/common": "^5.2.3",
+        "@angular/compiler": "^5.2.3",
+        "@angular/core": "^5.2.3",
+        "@angular/forms": "^5.2.3",
+        "@angular/http": "^5.2.3",
+        "@angular/platform-browser": "^5.2.3",
+        "@angular/platform-browser-dynamic": "^5.2.3",
+        "@angular/router": "^5.2.3",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.0",
         "@types/jquery": "^3.2.6",
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.4.1",
@@ -32,6 +32,7 @@
         "jquery": "^3.2.1",
         "ng-recaptcha": "^3.0.0",
         "ng-zorro-antd": "^0.6.13",
+        "ng-zorro-antd-extra": "^1.1.7",
         "primeng": "^4.1.3",
         "rxjs": "^5.5.2",
         "typescript-formatter": "^5.2.0",
@@ -39,9 +40,9 @@
     },
     "devDependencies": {
         "@angular-devkit/core": "^0.0.28",
-        "@angular/cli": "^1.6.5",
-        "@angular/compiler-cli": "^5.0.0",
-        "@angular/language-service": "^5.0.0",
+        "@angular/cli": "^1.6.7",
+        "@angular/compiler-cli": "^5.2.3",
+        "@angular/language-service": "^5.2.3",
         "typescript": "~2.4.2"
     }
 }
