--- a/AnnZone-Serve/src/main/resources/conf/common/app.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/app.properties
@@ -1,13 +1,13 @@
 #act base setting
 http.port=2222
 cli.port=2333
-#jwt=true
+jwt=true
 cli.session.max=600
-http.params.max=200
+#http.params.max=200
 http.secure=false
 session.ttl=600
 i18n=true
-debug=false
+debug=true
 cookie.prefix=ann_
 source.version=1.8
 target.version=1.8
@@ -15,7 +15,7 @@ server.header=AnnZone/1.0.0Dev
 secret=dd74ef8d524c678056d269a2ecb0536d
 metric.enabled=false
 job.pool.size=30
-session.encrypt=true
+session.encrypt=false
 app.default.recipient=i@anline.cn
 #跨域 无需在此配置，此处为全局配置，仅需在http api相关的控制器下面指定返回头即可
 cors=true
