修复字段绑定，提高API安全性

--- a/AnnZone-Console/package.json
+++ b/AnnZone-Console/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
+        "start:4500": "ng serve -o -p 4500",
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
