--- a/AnnZone-Serve/pom.xml
+++ b/AnnZone-Serve/pom.xml
@@ -29,51 +29,12 @@
   <url>http://www.anline.cn/</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven-assemply-plugin.version>3.1.0</maven-assemply-plugin.version>
-    <act.version>1.6.6</act.version>
-    <act-ebean2.version>1.3.0</act-ebean2.version>
-    <act-ebean.version>1.3.2</act-ebean.version>
-    <act-morphia.version>1.3.0</act-morphia.version>
-    <act-storage.version>0.12.0</act-storage.version>
-    <act-aaa.version>1.3.0</act-aaa.version>
-    <osgl-ut.version>1.0.1</osgl-ut.version>
-    <junit.version>4.10</junit.version>
-    <commons-lang3.version>3.5</commons-lang3.version>
-    <logback-classic.version>1.2.3</logback-classic.version>
-    <act-mustache.version>1.3.0</act-mustache.version>
-    <act-beetl.version>1.2.2</act-beetl.version>
-    <act-beetlsql.version>1.3.1</act-beetlsql.version>
-    <act-freemarker.version>1.2.0</act-freemarker.version>
-    <act-thymeleaf.version>1.2.0</act-thymeleaf.version>
-    <act-velocity.version>1.2.0</act-velocity.version>
-    <act-jfinal.version>1.0</act-jfinal.version>
-    <act-excel.version>1.3.0</act-excel.version>
-    <act-social-link.version>0.11.0</act-social-link.version>
-    <act-sql-common.version>1.2.1</act-sql-common.version>
-    <mysql.version>6.0.6</mysql.version>
-    <arangodb-java-driver>4.3.0</arangodb-java-driver>
-    <HikariCP.version>2.7.6</HikariCP.version>
-    <beanutils.version>1.9.3</beanutils.version>
-    <jieba-analysis.version>1.0.2</jieba-analysis.version>
-    <pinyin4j.version>2.5.1</pinyin4j.version>
-    <commons-httpclient.version>3.1</commons-httpclient.version>
-    <dom4j.version>2.1.0</dom4j.version>
-    <solrj.version>7.1.0</solrj.version>
-    <java-jwt.version>3.3.0</java-jwt.version>
-    <jjwt.version>0.9.0</jjwt.version>
-    <gson.version>2.8.2</gson.version>
-    <rxjava.version>2.1.8</rxjava.version>
-    <kotlin.version>1.2.10</kotlin.version>
-    <graphql-java.version>7.0</graphql-java.version>
-    <emoji-java.version>4.0.0</emoji-java.version>
-    <webjars-bootstrap.version>3.3.7</webjars-bootstrap.version>
-    <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
+    <act.version>1.8.1</act.version>
+    <act-ebean2.version>1.5.1</act-ebean2.version>
+    <act-morphia.version>1.4.0</act-morphia.version>
+    <act-storage.version>0.13.0</act-storage.version>
+    <act-aaa.version>1.4.0</act-aaa.version>
+    <act-excel.version>1.4.1</act-excel.version>
     <app.entry>cn.anline.zone.serve.Ann</app.entry>
   </properties>
 
@@ -93,43 +54,26 @@
       <artifactId>act</artifactId>
       <version>${act.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jre8</artifactId>
-      <version>${kotlin.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-test</artifactId>
-      <version>${kotlin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgl</groupId>
-      <artifactId>osgl-ut</artifactId>
-      <version>${osgl-ut.version}</version>
-      <scope>test</scope>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.jetbrains.kotlin</groupId>-->
+      <!--<artifactId>kotlin-stdlib-jre8</artifactId>-->
+      <!--<version>${kotlin.version}</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.jetbrains.kotlin</groupId>-->
+      <!--<artifactId>kotlin-test</artifactId>-->
+      <!--<version>${kotlin.version}</version>-->
+      <!--<scope>test</scope>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>${logback-classic.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>bootstrap</artifactId>
-      <version>${webjars-bootstrap.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
+      <version>1.2.3</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>${commons-lang3.version}</version>
+      <version>3.5</version>
     </dependency>
     <!--使用MysQL数据库-->
     <dependency>
@@ -153,7 +97,7 @@
     <dependency>
       <groupId>com.graphql-java</groupId>
       <artifactId>graphql-java</artifactId>
-      <version>${graphql-java.version}</version>
+      <version>7.0</version>
     </dependency>
     <dependency>
       <groupId>org.actframework</groupId>
@@ -163,46 +107,13 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.version}</version>
+      <version>6.0.6</version>
     </dependency>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>${beanutils.version}</version>
-    </dependency>
+
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>${HikariCP.version}</version>
-    </dependency>
-    <!-- 中文转拼音啦 -->
-    <dependency>
-      <groupId>com.belerweb</groupId>
-      <artifactId>pinyin4j</artifactId>
-      <version>${pinyin4j.version}</version>
-    </dependency>
-    <!-- 结巴分词 -->
-    <dependency>
-      <groupId>com.huaban</groupId>
-      <artifactId>jieba-analysis</artifactId>
-      <version>${jieba-analysis.version}</version>
-    </dependency>
-    <!-- 发送手机短信用的http请求包 -->
-    <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>${commons-httpclient.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.dom4j</groupId>
-      <artifactId>dom4j</artifactId>
-      <version>${dom4j.version}</version>
-    </dependency>
-    <!-- 搜索的类处理啦 -->
-    <dependency>
-      <groupId>org.apache.solr</groupId>
-      <artifactId>solr-solrj</artifactId>
-      <version>${solrj.version}</version>
     </dependency>
 
     <!--权限控制插件-->
@@ -246,43 +157,20 @@
       <version>${act-excel.version}</version>
     </dependency>
 
-    <!--JFinal-->
-    <!--<dependency>-->
-      <!--<groupId>com.github.piaohao</groupId>-->
-      <!--<artifactId>act-jfinal</artifactId>-->
-      <!--<version>${act-jfinal.version}</version>-->
-    <!--</dependency>-->
-
-    <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
-    <!--<dependency>-->
-      <!--<groupId>com.auth0</groupId>-->
-      <!--<artifactId>java-jwt</artifactId>-->
-      <!--<version>${java-jwt.version}</version>-->
-    <!--</dependency>-->
 
     <!--https://github.com/jwtk/jjwt-->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
-      <version>${jjwt.version}</version>
+      <version>0.9.0</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-    <!--<dependency>-->
-      <!--<groupId>com.google.code.gson</groupId>-->
-      <!--<artifactId>gson</artifactId>-->
-      <!--<version>${gson.version}</version>-->
-    <!--</dependency>-->
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
-      <version>${rxjava.version}</version>
+      <version>2.1.8</version>
     </dependency>
-    <dependency>
-      <groupId>com.vdurmont</groupId>
-      <artifactId>emoji-java</artifactId>
-      <version>${emoji-java.version}</version>
-    </dependency>
+
 
   </dependencies>
 
