--- a/AnnZone-Serve/src/main/resources/conf/common/db.properties
+++ b/AnnZone-Serve/src/main/resources/conf/common/db.properties
@@ -6,7 +6,7 @@ db.instances=mysql
 
 # db1 mysql default configurations
 
-db.mysql.impl=act.db.ebean2.EbeanPlugin
+db.mysql.impl=act.db.ebean.EbeanPlugin
 db.mysql.driver=com.mysql.cj.jdbc.Driver
 db.mysql.url=jdbc:mysql://localhost:3306/ann_zone_serve?serverTimezone=GMT&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 db.mysql.username=root
