--- a/AnnZone-Android/app/build.gradle
+++ b/AnnZone-Android/app/build.gradle
@@ -4,13 +4,17 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 //添加ObjectBox数据库插件
 apply plugin: 'io.objectbox'
-
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
 android {
-    compileSdkVersion _compileSdkVersion
+    compileSdkVersion 28
     defaultConfig {
         applicationId "cn.anline.annzone"
         minSdkVersion 15
-        targetSdkVersion _compileSdkVersion
+        targetSdkVersion 28
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,61 +35,44 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:28.0.0-rc01"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation "com.android.support:support-v4:28.0.0-rc01"
-    implementation "com.android.support:design:28.0.0-rc01"
-    implementation "com.android.support:recyclerview-v7:28.0.0-rc01"
-    implementation "com.android.support:cardview-v7:28.0.0-rc01"
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:support-v4:28.0.0"
+    implementation "com.android.support:design:28.0.0"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.android.support:multidex:1.0.3"
 //    AnKo
     implementation "org.jetbrains.anko:anko:$anko_version"
 //    ObjectBox 依赖
     implementation "io.objectbox:objectbox-kotlin:$objectboxVersion"
-    annotationProcessor "io.objectbox:objectbox-processor:$objectboxVersion"
+    kapt "io.objectbox:objectbox-processor:$objectboxVersion"
 //    Tabbar 底部标签选项卡
     implementation 'eu.long1:spacetablayout:1.0.4'
 //    Android M+ Permission Request 安卓6.0以上权限申请
     implementation 'me.weyye.hipermission:library:1.0.7'
 //    超强工具类 https://blankj.com/2016/07/31/android-utils-code/
-    implementation 'com.blankj:utilcode:1.19.3'
+    implementation 'com.blankj:utilcode:1.23.1'
 //    JSON解析库
-    implementation 'com.alibaba:fastjson:1.2.44'
+    implementation 'com.alibaba:fastjson:1.2.53'
 //    HTTP网络请求库
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 //    RestAPI接口请求库
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 //    json谷歌的解析库
-    implementation 'com.google.code.gson:gson:2.8.2'
-//    事件管理
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 //    响应式开发库
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-//    Apollo的核心库
-    implementation "com.github.lsxiao.Apollo:core:1.0.1-fix"
-//    IPC,如不需要可以不依赖
-    implementation "com.github.lsxiao.Apollo:ipc:1.0.1-fix"
-//    Apollo的编译时注解处理器
-    annotationProcessor "com.github.lsxiao.Apollo:processor:1.0.1-fix"
-    //如果你使用的是kotlin,请使用kapt
-    kapt "com.github.lsxiao.Apollo:processor:1.0.1-fix"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+
 //    步骤条
     implementation 'com.github.baoyachi:StepView:1.9'
-//    图片选择库
-    implementation 'com.github.martin90s:ImagePicker:v1.3.2'
-//    时间轴效果库
-    implementation 'com.github.vipulasri:timelineview:1.0.5'
-//    倒计时按钮
-    implementation 'com.white.countdownbutton:countdownbtn:1.0.2'
-    implementation 'com.github.iwgang:countdownview:2.1.6'
+
 //    红点提示
     implementation 'q.rorbin:badgeview:1.1.3'
 //    幻灯片
@@ -98,57 +85,38 @@ dependencies {
     implementation 'com.github.devlight.navigationtabstrip:navigationtabstrip:1.0.4'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     implementation 'com.flyco.roundview:FlycoRoundView_Lib:1.1.4@aar'
-//    元素小提示
-    implementation 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.15'
-    implementation 'com.github.florent37:viewtooltip:1.0.8'
+
 //    吐司美化版
     implementation 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
-//    Cookie库
-    implementation 'com.liuguangqiang.cookie:library:0.3'
+
 //    compile 'com.github.takusemba:multisnaprecyclerview:1.1.1'
 //    高德地图
     implementation 'com.amap.api:navi-3dmap:5.1.0'
-    implementation 'com.amap.api:location:3.7.0'
-    implementation 'com.amap.api:search:5.5.0'
+    implementation 'com.amap.api:location:4.4.0'
+    implementation 'com.amap.api:search:6.5.0.1'
     implementation 'com.yanzhenjie:loading:1.0.0'
 //    沉浸式状态栏和导航栏
 //    implementation 'com.gyf.barlibrary:barlibrary:2.3.0'
-    implementation 'com.gyf.immersionbar:immersionbar:2.3.1'
+    implementation 'com.gyf.immersionbar:immersionbar:2.3.2'
 //    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 //    图片加载库 不用Glide 因为它不能被某些兼容了 新版本和旧版本API不兼容
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 //    标签显示
     implementation 'me.gujun.android.taggroup:library:1.4@aar'
 //    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
 //    万能列表转换器适配器
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.42'
 //    下拉刷新库
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-5'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-5'//没有使用特殊Header，可以不加这行
 //    自动布局
     implementation 'com.google.android:flexbox:0.3.1'
 //    路由
-    implementation 'com.alibaba:arouter-api:1.3.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+    implementation 'com.alibaba:arouter-api:1.4.1'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
     implementation 'com.github.lzyzsd:jsbridge:1.0.4'
-//    主题框架
-    implementation 'com.bilibili:magicasakura:0.1.8@aar'
+
 //    引导页
     implementation 'com.github.apl-devs:appintro:v4.2.2'
-//    ScrollView 观察器 API 23 以下不能监听原生的滑动事件 https://github.com/ksoichiro/Android-ObservableScrollView
-    implementation "com.github.ksoichiro:android-observablescrollview:1.6.0"
-//    安卓自适应布局
-    implementation 'com.zhy:autolayout:1.4.5'
-//    下单、各种动画元素实现库
-    implementation 'com.airbnb.android:lottie:2.5.0-beta1'
-//    Emoji库
-    implementation 'io.github.rockerhieu:emojicon:1.4.0'
-//    MVP框架
-    implementation 'com.hannesdorfmann.mosby3:mvi:3.1.0'
-    implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0'
-    implementation 'com.hannesdorfmann.mosby3:viewstate:3.1.0'
-    implementation 'com.hannesdorfmann.mosby3:mvp-lce:3.1.0'
-    implementation 'com.hannesdorfmann.mosby3:mvp-nullobject-presenter:3.1.0'
-    implementation 'com.hannesdorfmann.mosby3:mvp-queuing-presenter:3.1.0'
 
 }
