--- a/AnnZone-Android/build.gradle
+++ b/AnnZone-Android/build.gradle
@@ -2,12 +2,9 @@
 
 buildscript {
     ext {
-        gradle_version = '3.1.4'
-        kotlin_version = '1.2.61'
-        anko_version='0.10.5'
-        _buildToolsVersion = '28.0.2'
-        _compileSdkVersion = 28
-        objectboxVersion = '2.0.0'
+        kotlin_version = '1.3.21'
+        anko_version='0.10.8'
+        objectboxVersion = '2.3.1'
     }
     repositories {
         google()
@@ -17,7 +14,7 @@ buildscript {
         maven { url "http://objectbox.net/beta-repo/" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:3.3.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
